# llm_infra_project

./: .env  .gitignore  LICENSE  README.md  base_config.py  docker-compose.yml  requirements.txt
apps/ingestion/: personal_intelligent_engine_ingestion.py
apps/qa/: Dockerfile  engine_qa_server.py  personal_intelligent_engine_qa.py
apps/ui/: package-lock.json  package.json
apps/ui/server/: index.js
apps/ui/src/: App.css  App.tsx
services/ai-gateway/: Cargo.toml  Dockerfile
services/ai-gateway/src/: main.rs
services/embedding/: Dockerfile  embed_server.py
